showcases/alphabet/a-service-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: a-service
spec:
  host: a-service
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
    outlierDetection:
      baseEjectionTime: 5.000s
      consecutiveErrors: 1
      interval: 1.000s
      maxEjectionPercent: 100
  subsets:
  - name: v1
    labels:
      version: v1
