showcases/alphabet/a-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a-service
spec:
  hosts:
  - a-service
  http:
  - route:
    - destination:
        host: a-service
        subset: v1
    # the default is 15s
    timeout: 1s
