showcases/alphabet/alphabet-service-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alphabet-service
spec:
  hosts:
  - alphabet-service
  http:
  - fault:
      delay:
        fixedDelay: 2s
        percent: 50
    route:
    - destination:
        host: alphabet-service
        subset: v1
