showcases/alphabet/alphabet-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alphabet-service
spec:
  hosts:
  - alphabet-service
  http:
  - route:
    - destination:
        host: alphabet-service
        subset: v1
