showcases/alphabet/alphabet-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spelling-service
spec:
  hosts:
  - "alphabet.cloud"
  gateways:
  - alphabet-gateway
  http:
  - route:
    - destination:
        host: spelling-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: a-service
spec:
  hosts:
  - a-service
  http:
  - route:
    - destination:
        host: a-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b-service
spec:
  hosts:
  - b-service
  http:
  - route:
    - destination:
        host: b-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c-service
spec:
  hosts:
  - c-service
  http:
  - route:
    - destination:
        host: c-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alphabet-service
spec:
  hosts:
  - alphabet-service
  http:
  - route:
    - destination:
        host: alphabet-service
        subset: v1
