showcases/alphabet/b-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b-service
spec:
  hosts:
  - b-service
  http:
  - route:
    - destination:
        host: b-service
        subset: v1
