showcases/alphabet/c-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: c-service
spec:
  hosts:
  - c-service
  http:
  - route:
    - destination:
        host: c-service
        subset: v1
